#4791# Moved CAD, USD, EUR to top of list

--- a/locale/ca_ES/currencies.xml
+++ b/locale/ca_ES/currencies.xml
@@ -3,12 +3,12 @@
 <!--
   * locale/ca_ES/currencies.xml
   *
-  * Copyright (c) 2003-2009 John Willinsky
+  * Copyright (c) 2000-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Currencies data XML file. Based on ISO 4217.
   *
-  * $Id$
+  * $Id: currencies.xml,v 1.7 2009/10/06 23:13:31 asmecher Exp $
   -->
 
 <!DOCTYPE currencies [
@@ -23,6 +23,9 @@
 ]>
 
 <currencies locale="ca_ES">
+	<currency name="Dòlar dels Estats Units" code_alpha="USD" code_numeric="840" />
+	<currency name="Euro" code_alpha="EUR" code_numeric="978" />
+	<currency name="Dòlar canadenc" code_alpha="CAD" code_numeric="124" />
 	<currency name="Dirhem de la Unió dels Emirats Àrabs" code_alpha="AED" code_numeric="784" />
 	<currency name="Afgani" code_alpha="AFN" code_numeric="971" />
 	<currency name="Lek" code_alpha="ALL" code_numeric="008" />
@@ -49,7 +52,6 @@
 	<currency name="Pula" code_alpha="BWP" code_numeric="072" />
 	<currency name="Ruble bielorús" code_alpha="BYR" code_numeric="974" />
 	<currency name="Dòlar de Belize" code_alpha="BZD" code_numeric="084" />
-	<currency name="Dòlar canadenc" code_alpha="CAD" code_numeric="124" />
 	<currency name="Franc congolès" code_alpha="CDF" code_numeric="976" />
 	<currency name="Franc suís" code_alpha="CHF" code_numeric="756" />
 	<currency name="Peso xilè" code_alpha="CLP" code_numeric="152" />
@@ -68,7 +70,6 @@
 	<currency name="Lliura egípcia" code_alpha="EGP" code_numeric="818" />
 	<currency name="Nakfa" code_alpha="ERN" code_numeric="232" />
 	<currency name="Birr etíop" code_alpha="ETB" code_numeric="230" />
-	<currency name="Euro" code_alpha="EUR" code_numeric="978" />
 	<currency name="Dòlar fijià" code_alpha="FJD" code_numeric="242" />
 	<currency name="Lliura de les Malvines" code_alpha="FKP" code_numeric="238" />
 	<currency name="Lliura esterlina" code_alpha="GBP" code_numeric="826" />
@@ -168,7 +169,6 @@
 	<currency name="Xíling de Tanzània" code_alpha="TZS" code_numeric="834" />
 	<currency name="Hrívnia" code_alpha="UAH" code_numeric="980" />
 	<currency name="Xíling d'Uganda" code_alpha="UGX" code_numeric="800" />
-	<currency name="Dòlar dels Estats Units" code_alpha="USD" code_numeric="840" />
 	<currency name="Peso uruguaià" code_alpha="UYU" code_numeric="858" />
 	<currency name="Som uzbek" code_alpha="UZS" code_numeric="860" />
 	<currency name="Bolívar fort veneçolà" code_alpha="VEF" code_numeric="937" />
