--- a/locale/eu_ES/currencies.xml
+++ b/locale/eu_ES/currencies.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-  * currencies.xml
+  * locale/eu_ES/currencies.xml
   *
-  * Copyright (c) 2003-2009 John Willinsky
+  * Copyright (c) 2000-2009 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
   *
   * Currencies data XML file. Based on ISO 4217.
   *
-  * $Id$
+  * $Id: currencies.xml,v 1.2 2009/10/06 23:13:32 asmecher Exp $
   -->
 
 <!DOCTYPE currencies [
@@ -23,6 +23,9 @@
 ]>
 
 <currencies locale="eu_ES">
+	<currency name="Dolar estatubatuarra" code_alpha="USD" code_numeric="840" />
+	<currency name="Euroa" code_alpha="EUR" code_numeric="978" />
+	<currency name="Dolar kanadarra" code_alpha="CAD" code_numeric="124" />
 	<currency name="Dirham emirerribatuarra" code_alpha="AED" code_numeric="784" />
 	<currency name="Afghani afganistandarra" code_alpha="AFN" code_numeric="971" />
 	<currency name="Lek albaniarra" code_alpha="ALL" code_numeric="008" />
@@ -49,7 +52,6 @@
 	<currency name="Pula botswanarra" code_alpha="BWP" code_numeric="072" />
 	<currency name="Errublo bielorrusiarra" code_alpha="BYR" code_numeric="974" />
 	<currency name="Dolar belizetarra" code_alpha="BZD" code_numeric="084" />
-	<currency name="Dolar kanadarra" code_alpha="CAD" code_numeric="124" />
 	<currency name="Franko kongoarra" code_alpha="CDF" code_numeric="976" />
 	<currency name="Franko suitzarra" code_alpha="CHF" code_numeric="756" />
 	<currency name="Peso txiletarra" code_alpha="CLP" code_numeric="152" />
@@ -68,7 +70,6 @@
 	<currency name="Libera egiptoarra" code_alpha="EGP" code_numeric="818" />
 	<currency name="Nakfa eritrearra" code_alpha="ERN" code_numeric="232" />
 	<currency name="Birr etiopiarra" code_alpha="ETB" code_numeric="230" />
-	<currency name="Euroa" code_alpha="EUR" code_numeric="978" />
 	<currency name="Dolar fijiarra" code_alpha="FJD" code_numeric="242" />
 	<currency name="Libera falklandarra" code_alpha="FKP" code_numeric="238" />
 	<currency name="Libera esterlina" code_alpha="GBP" code_numeric="826" />
@@ -168,7 +169,6 @@
 	<currency name="Txelin tanzaniarra" code_alpha="TZS" code_numeric="834" />
 	<currency name="Hryvnia ukrainarra" code_alpha="UAH" code_numeric="980" />
 	<currency name="Txelin ugandarra" code_alpha="UGX" code_numeric="800" />
-	<currency name="Dolar estatubatuarra" code_alpha="USD" code_numeric="840" />
 	<currency name="Peso uruguaitarra" code_alpha="UYU" code_numeric="858" />
 	<currency name="Som uzbekistandarra" code_alpha="UZS" code_numeric="860" />
 	<currency name="Bolívar fuerte venezuelarra" code_alpha="VEF" code_numeric="937" />
